server/7.6/install/upgrade.md
---
title: Upgrade
description: To upgrade a Couchbase-Server cluster means to upgrade the version
  of Couchbase Server that is running on every node.
pubDate: 2026-08-17T09:53:44.266Z
antora:
  editUrl: https://github.com/couchbase/docs-server/edit/release/7.6/modules/install/pages/upgrade.adoc
  xref: xref:7.6@server:install:upgrade.adoc[]
---

[Consult the llms.txt file for a full list of contents](/llms.txt)
[View original HTML](/server/7.6/install/upgrade.html)

# Upgrade

> To upgrade a Couchbase-Server cluster means to upgrade the version of Couchbase Server that is running on every node. 

> [!WARNING]
> Upgrading from Versions 7.1 or 7.2 to Versions 7.6.0 or 7.6.1
> 
> If there are index service nodes running in your cluster, you must use the swap rebalance method when upgrading from Couchbase Server 7.1 or 7.2 to Server 7.6.0 or 7.6.1.
> 
> See [Swap Rebalance](upgrade-procedure-selection.md#swap-rebalance) for more information about the swap rebalance method.

## [](#before-you-upgrade)Before You Upgrade

Before upgrading, consider the following version compatibility concerns.

### [](#upgrading-to-version-7-x-with-earlier-versions-of-net-sdk)Upgrading to Version 7.x With Earlier Versions of .NET SDK

When upgrading from Couchbase 6.5 or 6.6 to 7.0 or later, determine if both of the following are true:

* You use a version of the .NET SDK prior to 3.2.9.
* Your cluster is in mixed mode networking where some nodes use IPv4 addressing and others use IPv6\. See [Changing Address Family](../manage/manage-nodes/manage-address-families.md#changing-address-family-to-IPv6) for steps to determine if your cluster is running in this mode.

Using a version of the .NET SDK prior to 3.2.9 with mixed mode network addressing can cause issues with write operations. Before upgrading, resolve the mixed-mode networking issue.

### [](#upgrading-from-pre-7-1-versions-of-couchbase-server)Upgrading from Pre-7.1 Versions of Couchbase Server

You cannot upgrade directly from a version of Couchbase Server earlier than 7.1 to version 7.2.4 or later. For example, you can directly upgrade from version 6.6 to version 7.2.3\. You cannot directly upgrade from version 6.6 to version 7.2.4\. A compatibility issue with the Erlang version used by these earlier server versions prevents a direct upgrade to later versions of the server. To upgrade from server versions 6.5, 6.6, or 7.0 to version 7.6 or later, first upgrade to a version between 7.1 and 7.2.3\. Then upgrade to version 7.6 or later.

## [](#understanding-upgrade)Understanding Upgrade

To _upgrade_ a Couchbase-Server cluster means to upgrade the version of the server that is running on every node. For example, modifying a cluster where all of its nodes are running Couchbase Server Enterprise Edition Version 6.6, so that each of its nodes subsequently runs Couchbase Server Enterprise Edition Version 7.6.x.

An _upgrade procedure_, like an _install_ procedure, involves both preparation routines and specific upgrade commands that are performed on each node. To be upgraded, a cluster must have each of its nodes individually upgraded in turn; and the upgrade procedure for the cluster must therefore be selected in regard to whether the cluster is required to continue serving data, or to cease serving data, during the cluster-upgrade. A review of the factors that determine the appropriateness of an upgrade-procedure is provided in [Upgrade Procedure-Selection](upgrade-procedure-selection.md).

## [](#version-numbers)Couchbase Server Version Numbers

When upgrading, you need to consider the version numbers of the server that you're upgrading from and to. Not all versions of Couchbase Server can be directly upgraded to all later versions. Also, the version numbers indicate under what conditions you can downgrade a version upgrade should you encounter problems. See [Downgrade](#downgrade) for more information about downgrading an upgrade.

Couchbase Server uses a 3-number version scheme:

![Couchbase Server 3-digit number scheme example: 8.0.1](_images/couchbase_version_numbers.svg) 

* The first number is the major version number.
* The second number is the minor version number.
* The third number is the maintenance or patch version number. The terms patch version and maintenance version are interchangeable.

## [](#supported-upgrade-paths)Upgrade Paths

An upgrade _path_ declares that the upgrading one version of Couchbase Server to another is _supported_. The tables in the following subsections list upgrade paths for Enterprise Edition and for Community Edition, respectively. Each instance of the \`→\` sign declares support for the upgrade of the server-version on the left of the sign to the server-version on the right.

You can perform all supported upgrades with the cluster either offline or online.

> [!TIP]
> As far as is possible, you should aim to keep your cluster up to date with the latest version of Couchbase Server.

### [](#table-upgrade-enterprise)Enterprise Edition Upgrade Paths

| Starting Version | Path to Current Version                                               |
| ---------------- | --------------------------------------------------------------------- |
| 5.0.x            | 5.0.x and 5.1.x → 6.6 → 7.2.3 → 7.6.x[\[1\]](#erlang-7-2-4-footnote1) |
| 5.5x             | 5.5.0+ → 6.6 → 7.2.3 → 7.6.x[\[1\]](#erlang-7-2-4-footnote1)          |
| 6.x              | 6.0 → 6.6 → 7.2.3 → 7.6.x[\[1\]](#erlang-7-2-4-footnote1)             |
| 7.x              | 7.0 → 7.1 → 7.6.x[\[1\]](#erlang-7-2-4-footnote1)                     |

1The upgrade to Erlang support in Couchbase server 7.2.4 requires that you first upgrade Couchbase to version 7.1.0 or later before upgrading to version 7.6.x

### [](#table-upgrade-community)Community Edition Upgrade Paths

| Starting Version | Path to Current Version                                   |
| ---------------- | --------------------------------------------------------- |
| 5.x              | 5.x → 6.6 → 7.2.2 → 7.6.x[\[1\]](#erlang-7-2-4-footnote2) |
| 6.x              | 6.0 → 6.6 → 7.2.2 → 7.6.x[\[1\]](#erlang-7-2-4-footnote2) |
| 7.x              | 7.0 → 7.1 → 7.6.x[\[1\]](#erlang-7-2-4-footnote2)         |

1The upgrade to Erlang support in Couchbase server 7.2.4 requires that you first upgrade Couchbase to version 7.1.0 or later before upgrading to version 7.6.x

Important note when upgrading from 7.0.4 to 7.2.x on Windows 2019

Upgrading from version 7.0.4 → 7.2x on Windows Server 2019 may result in a missing `java` executable files.

The problem is caused by the way Windows handles upgrades when dealing with older files, resulting in files being removed from the Couchbase installation without being replaced.

The server can be fixed by invoking the Windows Repair operation on the Couchbase installation. This will restore the missing files.

## [](#how-to-upgrade-your-cluster)How to Upgrade Your Cluster

If you are upgrading several nodes at once, then the version of the software on each node must be kept in step throughout the upgrade process.  
For example, if you are upgrading three enterprise nodes (`**Node 1**`, `**Node 2**` and `**Node 3**`) from version 5.1x to 7.6.x, then you would use the following sequence:

Example 1\. Upgrading from version 5.1.x to 7.6.x

| Step | Description                           | Upgrades                                                                         |
| ---- | ------------------------------------- | -------------------------------------------------------------------------------- |
| 1    | Upgrade all nodes from 5.1x to 6.6    | **Node 1** ⇒ 5.1x → 6.6 **Node 2** ⇒ 5.1x → 6.6 **Node 3** ⇒ 5.1x → 6.6          |
| 2    | Upgrade all nodes from 6.6 to 7.2.3   | **Node 1** ⇒ 6.6 → 7.2.3 **Node 2** ⇒ 6.6 → 7.2.3 **Node 3** ⇒ 6.6 → 7.2.3       |
| 3    | Upgrade all nodes from 7.2.3 to 7.6.x | **Node 1** ⇒ 7.2.3 → 7.6.x **Node 2** ⇒ 7.2.3 → 7.6.x **Node 3** ⇒ 7.2.3 → 7.6.x |

> [!NOTE]
> Upgrading between non-adjacent version numbers is usually _not_ supported.
> 
> For example, to upgrade from **5.1.x** to **7.2.4**, then _three_ upgrades must be performed (as shown in [Example 1](#upgrade-example)):  
> first, from **5.1.x** to **6.6**,  
> then, from **6.6** to **7.2.3**  
> and finally, from **7.2.3** to **7.6.x**.

## [](#upgrade-community-enterprise)Upgrade from Community Edition to Enterprise

If you're currently operating a Couchbase Server cluster on Community Edition, you can upgrade it to Enterprise Edition by way of a [rolling online upgrade](upgrade-procedure-selection.md#online-upgrade). This involves switching out the Community Edition nodes with fresh, net-new Enterprise Edition nodes. Both swap rebalance and remove and rebalance methods are supported. Delta Recovery is not supported since the new nodes must be fresh Enterprise Edition installations without any pre-existing Community Edition data remaining on them.

> [!NOTE]
> Rolling upgrades from CE to EE are not supported if there are index service nodes running in the cluster.

The Enterprise Edition nodes must be running the same version number of Couchbase Server as the Community Edition nodes that they're replacing, otherwise the upgrade may fail. This means you can not upgrade to a later version of Couchbase Server while also upgrading to Enterprise Edition during the same rolling upgrade.

If you want to upgrade from an earlier version of Couchbase Server Community Edition to a later version of Couchbase Server Enterprise Edition, you need to perform 2 separate upgrade procedures:

1. Upgrade the entire cluster to Enterprise Edition via a rolling online upgrade
2. Upgrade to the desired version number of Couchbase Server using any supported type of upgrade

For example, if you wanted to upgrade from Couchbase Server 6.6 Community Edition to Couchbase Server 7.6 Enterprise Edition, the process would look like the following:

![Example Upgrade Path from Community to Enterprise](_images/diag-0b1e6b61cc817ed288bd0b9e9db3f8e028e7181c.svg) 

Figure 1\. Example Upgrade Path from Community to Enterprise

Additional Notes about Upgrading from Community to Enterprise

* Couchbase Server clusters _must_ be run either entirely on Enterprise Edition nodes or entirely on Community Edition nodes.  
Once you've upgraded one node to Enterprise Edition, you must upgrade all the other nodes before the cluster is considered as being in a steady, supportable state.
* CE does not support index service rebalancing. So, when the cluster is running with one or more CE nodes, then the indexes hosted on nodes being removed may be lost.  
Users can create equivalent indexes (the same index with a different name) on different nodes to avoid loss of index functionality.
* If a rolling online upgrade to Enterprise Edition isn't possible in your environment, contact Couchbase for assistance.

> [!IMPORTANT]
> Remember that Enterprise Edition is not free to run in production. If you're interested in upgrading to Couchbase Server Enterprise Edition, check out the [editions page](https://www.couchbase.com/products/editions).

See [Upgrade Procedure-Selection](upgrade-procedure-selection.md) for a list of procedures that can be used when upgrading from Community Edition to Enterprise. Note, however, that _Graceful Failover_ for Data Service nodes, with _Delta Recovery_, is _not_ supported for such upgrades: instead, _removal_, _addition_, and _swap rebalance_ should be used; for all nodes.

## [](#node-naming-and-upgrade)Node-Naming and Upgrade

In Couchbase Enterprise Server Version 7.2 or later, the node-name _must_ be correctly identified in the node-certificate as a Subject Alternative Name. If the node-name is _not_ correctly identified, failure may occur during upgrade. For information, see [Node-Certificate Validation](../learn/security/certificates.md#node-certificate-validation).

## [](#downgrade)Downgrade

If you have issues with an upgrade, you may want to downgrade to the earlier version of Couchbase Server. Your ability to downgrade depends on the whether the upgrade was between and major or minor version numbers or a maintenance version. See [Couchbase Server Version Numbers](#version-numbers) for an explanation of Couchbase Server's version numbering scheme.

### [](#downgrade%5Fmajor%5Fminor)Downgrading an Upgrade Between Major or Minor Versions

A major or minor version upgrade is an upgrade between versions that have different first or second digit in their version numbers. Examples of a major or minor version upgrade include:

* Upgrading from version 6.6.0 to version 7.2.3 is a major upgrade.
* Upgrading from version 7.2.3 to version 7.6.10 is a minor upgrade.

See [Couchbase Server Version Numbers](#version-numbers) for more information about version numbers.

When you're upgrading between major or minor versions of Couchbase Server, you can downgrade at any time before you finalize your upgrade. Finalizing an upgrade means that all nodes in the cluster are running the new version of Couchbase Server. To learn how to prevent finalization until you're ready, see [Preventing Finalization](#prevent-finalization).

When you finalize an upgrade, Couchbase Server updates metadata, objects, and structures to enable new features. As long as the cluster is running in mixed mode (at least 1 node running a different version), it cannot make these changes.

Use the online downgrade process to downgrade a major or minor upgrade before you have finalized it. See [Perform an Online Downgrade](#online-downgrade) to learn how to perform an online downgrade.

Once you finalize your major or minor upgrade, you cannot roll it back. Couchbase Server cannot revert the metadata, objects, and structures to their earlier formats. If your applications have issues with the new version after finalization, you can only revert to the earlier version by:

1. Creating a new cluster.
2. Installing the earlier version of Couchbase Server.
3. Migrating your data to the new cluster.

Because finalization increases the difficulty in rolling back an upgrade, it's vital to test the new version with your applications before you finalize it. See the next section for tips on preventing finalization until you're ready to finalize your upgrade.

> [!NOTE]
> If you do need to roll back a finalized upgrade and you have a disaster recovery cluster running the previous version synced via XDCR, consider switching to it. Then you can create a new cluster running the prior version and either use it as the disaster recovery cluster or switch back to it after it has synched all data.

### [](#prevent-finalization)Preventing Finalization

You should verify that your applications perform well using the new version of Couchbase Server before you finalize your upgrade. Fully testing your applications may require you to upgrade all nodes in the cluster. However, Couchbase Server finalizes your installation when you upgrade the last node to the new version of Couchbase Server.

A workaround is to add a small arbiter node running the earlier version of Couchbase Server to your cluster before completing your upgrade. An arbiter node does not host any services, including the data service, so you can allocate minimal resources to it.

> [!NOTE]
> Couchbase Server introduced arbiter nodes in version 7.6\. Therefore, you can only use this method if you're upgrading from 7.6.0 or later. See [Adding Arbiter Nodes](../learn/clusters-and-availability/nodes.md#adding-arbiter-nodes) for more about arbiter nodes.

The presence of the arbiter node prevents Couchbase Server from finalizing the upgrade because the cluster is running in mixed mode. You can upgrade all other nodes in the cluster to test your applications with the new version of Couchbase Server.

The arbiter node also prevents you from using any of the new features in the new version of Couchbase Server.

To add an arbiter node, follow the steps in [Join a Cluster and Rebalance](../manage/manage-nodes/join-cluster-and-rebalance.md) and deselect all services before adding the node to the cluster.

Once you have verified that the new version of Couchbase Server works well for your applications, remove the arbiter node to finalize the upgrade.

If you find that the new version of Couchbase Server does not work well for your applications, keep the arbiter node in place. Then downgrade the other nodes to the earlier version of Couchbase Server. Once you have finished updating the nodes, remove the arbiter node to complete the downgrade. See [Perform an Online Downgrade](#online-downgrade) for the steps to take to perform the downgrade.

### [](#downgrade-maintenance)Downgrading an Upgrade Between Maintenance or Patch Versions

If you're upgrading between maintenance versions of Couchbase Server, you can downgrade at any time, even after you finalize the upgrade. A maintenance or patch version upgrade is an upgrade between versions that have the same major and minor version numbers but different maintenance version numbers. For example, an upgrade from version 7.6.0 to version 7.6.1 is a maintenance version upgrade. You can downgrade a finalized maintenance version upgrade because they do not make changes to metadata, objects, and structures that would prevent downgrading.

> [!IMPORTANT]
> If you have enabled a special maintenance version or a diagnostic feature supplied by Couchbase Support or another Couchbase team, contact Couchbase Support for assistance before attempting to downgrade your cluster.
> 
> If you have enabled new features using the Developer Preview Mode, you cannot downgrade your cluster.

You downgrade a maintenance version upgrade by performing an online downgrade. See [Perform an Online Downgrade](#online-downgrade) for more the steps to take.

### [](#online-downgrade)Perform an Online Downgrade

You can perform an online downgrade when:

* You're downgrading an upgrade between maintenance or patch versions of Couchbase Server. See [Downgrading an Upgrade Between Maintenance or Patch Versions](#downgrade-maintenance) for more information.
* You're downgrading an upgrade between major or minor versions of Couchbase Server and you have not finalized the upgrade. See [Downgrading an Upgrade Between Major or Minor Versions](#downgrade%5Fmajor%5Fminor) for more information.

The online downgrade method is similar to an [online upgrade](upgrade-cluster-online.md#online-upgrade-at-reduced-and-full-capacity) procedure. You perform the same swap rebalance procedure where you remove a node, install Couchbase Server, and then add it back to the cluster before rebalancing. The difference is that instead of installing a later version of Couchbase Server on the node, you install an earlier version of Couchbase Server.

To perform an online downgrade:

1. [Remove a node from the cluster](../manage/manage-nodes/remove-node-and-rebalance.md).
2. Perform a rebalance to complete the removal.
3. On the node you removed, install the earlier version of Couchbase Server.
4. [Add the node back to the cluster](../manage/manage-nodes/add-node-and-rebalance.md).
5. Perform a rebalance to complete the addition.
6. Repeat steps 1-5 for each node in the cluster until all nodes are running the earlier version of Couchbase Server.
7. If you added an arbiter node to prevent finalization, remove the arbiter node and perform a rebalance to complete the downgrade. See [Preventing Finalization](#prevent-finalization) for more information about using an arbiter node to prevent finalization.

> [!NOTE]
> You cannot use an offline downgrade to roll back an upgrade. An offline downgrade is similar to an offline upgrade, except that you install an earlier version of Couchbase Server instead of a later version. See [Upgrade with Cluster Offline](upgrade-procedure-selection.md#offline-upgrade) for more information about offline upgrades. You also cannot use a graceful failover followed by a full recovery to perform a downgrade.